--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                         </div>
                         <div class="operation_number_box_three">
                             <button id="btn_result" class="btn_result">=</button>
+                            <button id="btn_clear_last" class="btn_clear_last">CE</button>
                         </div>
                     </div>
                 </div>
