--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>calculator_project_v1.0</title>
+    <title>calculator_project_v3.0</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="body">
+<body>
     <div class="calculator">
         <div class="calculator_container">
             <div class="calculator_content">
@@ -43,7 +43,9 @@
                         </div>
                         <div class="operation_number_box_three">
                             <button id="btn_result" class="btn_result">=</button>
+                            <button id="btn_point" class="btn_point">.</button>
                             <button id="btn_clear_last" class="btn_clear_last">CE</button>
+                            <button id="btn_theme" class="btn_theme"><img src="images/icontheme.png" width="30" alt="theme"></button>
                         </div>
                     </div>
                 </div>
